--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
